Fixed dem scrollbars

--- a/styles/account.css
+++ b/styles/account.css
@@ -1,115 +1,86 @@
-@font-face {
-    font-family: 'ostrich_sansmedium';
-    src: url('../font/ostrich/ostrich-regular-webfont.eot');
-    src: url('../font/ostrich/ostrich-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../font/ostrich/ostrich-regular-webfont.woff') format('woff'),
-         url('../font/ostrich/ostrich-regular-webfont.ttf') format('truetype'),
-         url('../font/ostrich/ostrich-regular-webfont.svg#ostrich_sansmedium') format('svg');
-    font-weight: normal;
-    font-style: normal;
+h1, h2 {
+    font-family: 'ostrich_sansmedium', Arial, sans-serif;
+}
+
+.column {
+    margin-top: 100px;
+    bottom: 0px;
 }
 
 #accountMain {
+    bottom: 0px;
     background: url("../images/AccountBackground2.jpg");
     background-position: center;
     background-size: cover;
-    margin-bottom: 0px;
-    height: 100%;
-    bottom: 0px;    
-    position: absolute;
-    padding: 1px;
-    overflow: auto;
 }
 
-#Overview {
+#accountMain h1 {
     text-align: center;
-    font-family: : 'ostrich_sansmedium', Arial, sans-serif;
-    margin-top: 50px;
-    font-size: 85px;
+    margin-top: 40px;
+    font-size: 64px;
 }
 
-#liked h1{
-    font-size: 45px;
-    margin-left: 20px;
+#accountMain h2 {
+    text-align: center;
+    margin-top: 0px;
+    font-size: 32px;
 }
 
-#likedbox{
+.container {
     position: absolute;
-    top: 80px;
-    width: 90%;
+    top: 36px;
+    left: 0px;
+    right: 0px;
     bottom: 0px;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
-.row{
-    width: 94%;
+.row {
+    width: 90%;
     height: 30%;
-    padding: 3%;
+    margin: 8% 5% 8% 5%;
 }
 
-.col{
-    width: 26%;
+.col {
+    width: 30%;
     height: 100%;
-    padding: 2%;
+    margin-right: 3%;
     float: left;
 }
 
-.image{
+.image {
     height: auto;
-    width:100%;
+    width: 100%;
 }
 
 .image:hover {
-    opacity:.7;
+    opacity: 0.8;
 }
 
-#past h1{
-    font-size: 45px;
-    margin-left: 15px;
-}
-
-#pastbox{
-    position: absolute;
-    padding: 1px;
-    height: 100%;
-    width: 90%;
-    overflow: scroll;
-}
-
-.search{
+.search {
     background-color: #BBB9B9;
-    height:20%;
-    width: 94%;
-    border-radius: 10px;
-    opacity: .5;
-    padding: 5px;
-    margin: 15px;
+    border-radius: 4px;
     background: -webkit-linear-gradient(180deg, #BFBFBF, #F2F2F2); /* For Safari 5.1 to 6.0 */
     background: -o-linear-gradient(180deg, #BFBFBF, #F2F2F2); /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(180deg, #BFBFBF, #F2F2F2); /* For Firefox 3.6 to 15 */
     background: linear-gradient(180deg, #BFBFBF, #F2F2F2); /* Standard syntax */
 }
 
-.search:hover{
-    opacity: .8;
+.search:hover {
+    opacity: 0.8;
 }
 
-.room_name{
-    padding-left:10px;
+.room_type {
+    font-family: 'ostrich_sansmedium', Arial, sans-serif;
+    padding-left: 10px;
     padding-top: 10px;
+    padding-bottom: 10px;
     color: white;
-    height: 50%;
-    font-size:60px;
+    font-size: 36px;
 }
 
-.room_descript{
-    padding-left:10px;
-    font-size: 30px;
-    height: 40%;
-}
-
-.column {
-    margin-top: 100px;
-    font-size: 25px;
-    bottom:0px;
+.room_filters {
+    padding-left: 10px;
+    font-size: 20px;
 }
